--- a/style.css
+++ b/style.css
@@ -6,10 +6,18 @@
     text-align: center;
 }
 
-body {
+html {
+    min-height: 100%;
+    margin: 0;
+    width: 100%;
+}
+
+body{
     background: linear-gradient(purple, coral);
-    background-repeat: no-repeat;
-    height: 100vh;
+    border: 1px solid transparent;
+    margin: 0;
+    height: 100%;
+    width: 100%;
 }
 
 .container {
@@ -18,7 +26,7 @@ body {
     text-align: center;
     border: 3px solid purple;
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, 0.13)
+    background-color: rgba(255, 255, 255, 0.13);
 }
 
 h1 {
@@ -57,4 +65,38 @@ input:hover {
 .addBtn:hover {
     cursor: pointer;
     padding: 7px 9px;
+}
+
+p {
+    color: yellow;
+    margin-bottom: 10px;
+
+}
+
+.list-section {
+    width: 50%;
+    margin: 30px auto;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    border: 2px solid purple;
+    background-color: rgba(0, 0, 0, 0.096);
+    padding: 10px 20px;
+    margin: 10px 0px;
+    text-align: start;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: yellow;
+}
+
+.removeBtn {
+    color: purple;
+    font-weight: bold;
+    font-size: 1.4rem;
+    padding: 5px 12px;
 }
